--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,8 +35,7 @@ jobs:
     - name: Run Tests (with error handling)
       run: |
         python3 manage.py test || echo "Tests failed, but continuing..."
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+
 
     - name: Login to Docker (with error handling)
       if: github.ref == 'refs/heads/main'
@@ -46,11 +45,8 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker buildx create --use
-        docker buildx build \
-          --file Dockerfile \
-          --tag ${{ secrets.DOCKER_LOGIN }}/server-app-pep:latest \
-          --push .
+        docker image build -t ${{ secrets.DOCKER_LOGIN }}/pyflask:latest .
+        docker push ${{ secrets.DOCKER_LOGIN }}/pyflask:latest
 
     env:
       DOCKER_CLI_EXPERIMENTAL: enabled
