--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,7 +35,8 @@ jobs:
     - name: Run Tests (with error handling)
       run: |
         python3 manage.py test || echo "Tests failed, but continuing..."
-
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
     - name: Login to Docker (with error handling)
       if: github.ref == 'refs/heads/main'
@@ -45,8 +46,11 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker image build -t ${{ secrets.DOCKER_LOGIN }}/pyflask:latest .
-        docker push ${{ secrets.DOCKER_LOGIN }}/pyflask:latest
+        docker buildx create --use
+        docker buildx build \
+          --file Dockerfile \
+          --tag ${{ secrets.DOCKER_LOGIN }}/server-app-pep:latest \
+          --push .
 
     env:
       DOCKER_CLI_EXPERIMENTAL: enabled
