updated docker organized commands

--- a/DockerFile
+++ b/DockerFile
@@ -1,23 +1,17 @@
-# env
+# 
 FROM python:3.9
 
-# working directory
-WORKDIR /app
+# 
+WORKDIR /code
 
-# dependencies
-COPY requirements.txt /app/
+# 
+COPY ./requirements.txt /code/requirements.txt
 
-# install dependecines
-RUN pip install --no-cache-dir -r requirements.txt
+# 
+RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-# add files
-COPY ./app/
+# 
+COPY ./app /code/app
 
-# Make port 80 available to the world outside this container
-EXPOSE 80
-
-# Set the maintainer label
-LABEL maintainer="pavanpogula pavapogula28@gmail.com"
-
-# run commands
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
+# 
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
