--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -39,7 +39,6 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Login to Docker (with error handling)
-      if: github.ref == 'refs/heads/main'
       run: |
         echo "Logging into Docker..."
         docker login --username ${{ secrets.DOCKER_LOGIN }} --password ${{ secrets.DOCKER_PASSWORD }} || exit 1
@@ -49,7 +48,7 @@ jobs:
         docker buildx create --use
         docker buildx build \
           --file Dockerfile \
-          --tag ${{ secrets.DOCKER_LOGIN }}/server-app-pep:latest \
+          --tag ${{ secrets.DOCKER_LOGIN }}/server:latest \
           --push .
 
     env:
