--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,22 +35,25 @@ jobs:
     - name: Run Tests (with error handling)
       run: |
         python3 manage.py test || echo "Tests failed, but continuing..."
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Login to Docker (with error handling)
-      run: |
-        echo "Logging into Docker..."
-        docker login --username ${{ secrets.DOCKER_LOGIN }} --password ${{ secrets.DOCKER_PASSWORD }} || exit 1
-
-    - name: Build and push Docker image
-      run: |
-        docker buildx create --use
-        docker buildx build \
-          --file Dockerfile \
-          --tag ${{ secrets.DOCKER_LOGIN }}/server:latest \
-          --push .
-
-    env:
-      DOCKER_CLI_EXPERIMENTAL: enabled
-      DOCKER_BUILDKIT: 1
+        -
+          name: Checkout
+          uses: actions/checkout@v4
+        -
+          name: Set up QEMU
+          uses: docker/setup-qemu-action@v3
+        -
+          name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
+        -
+          name: Login to Docker Hub
+          uses: docker/login-action@v3
+          with:
+            username: ${{ secrets.DOCKER_LOGIN}}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+        -
+          name: Build and push
+          uses: docker/build-push-action@v5
+          with:
+            context: .
+            push: true
+            tags: user/app:latest
