--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -57,4 +57,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: user/app:latest
+        tags: ${{ secrets.DOCKER_LOGIN}}/server-app-pep:latest
