--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,7 @@
-name: Fast API Docker Build and Push (Improved)
-
+name: Fast API docker build push
 on:
   push:
     branches: [ "main", "dev" ]
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,48 +11,26 @@ jobs:
         python-version: ["3.9"]
     steps:
     - uses: actions/checkout@v3
-
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
-    - name: Install dependencies
+    - name: Install Dependencies
       run: |
         python3 -m pip install --upgrade pip
         pip3 install -r requirements.txt
-
-    - name: Run Tests (with error handling)
+    - name: Run Tests
       run: |
-        python3 manage.py test || echo "Tests failed, but continuing..."
-    -
-      name: Checkout
-      uses: actions/checkout@v4
-    -
-      name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-    -
-      name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_LOGIN}}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    -
-      name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-   
-    -
-      name: Build and push
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: pavanpogula/server:latest
+        python3 manage.py test
+
+    - name: Build the FastAPI Docker image
+      if: github.ref == 'refs/heads/main'
+      run: docker build -t '${{secrets.DOCKER_USERNAME}}'/server-app-pep:'${{github.sha}}' .
+      
+    - name: Login to docker
+      if: github.ref == 'refs/heads/main'
+      run: docker login --username '${{secrets.DOCKER_LOGIN}}' --password '${{secrets.DOCKER_PASSWORD}}'
+
+    - name: Push the docker image
+      if: github.ref == 'refs/heads/main'
+      run: docker push '${{secrets.DOCKER_USERNAME}}'/server-app-pep:'${{github.sha}}'
