--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Build the FastAPI Docker image
       if: github.ref == 'refs/heads/main'
-      run: docker build -t '${{secrets.DOCKER_USERNAME}}'/server-app-pep:'${{github.sha}}' .
+      run: docker build -t '${{secrets.DOCKER_USERNAME}}'/server-app-pep:'${{github.sha}}' . --platform linux/x86_64
       
     - name: Login to docker
       if: github.ref == 'refs/heads/main'
