--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -33,4 +33,4 @@ jobs:
 
     - name: Push the docker image
       if: github.ref == 'refs/heads/main'
-      run: docker push '${{secrets.DOCKER_USERNAME}}'/server-app-pep:'${{github.sha}}'
+      run: docker push '${{secrets.DOCKER_USERNAME}}'/server-app-pep:latest
