--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,6 +8,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_ACCESS_KEY_ID}}
+      AWS_ACCESS_KEY_ID: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+      REGION_NAME: ${{secrets.REGION_NAME}}
+
     strategy:
       fail-fast: false
       matrix:
@@ -27,13 +32,13 @@ jobs:
         pytest -rA
 
     - name: Build the FastAPI Docker image
-      if: github.ref == 'refs/heads/main'
+      
       run: docker build -t '${{secrets.DOCKER_USERNAME}}'/server-app-pep:latest . --platform linux/amd64
       
     - name: Login to docker
-      if: github.ref == 'refs/heads/main'
+     
       run: docker login --username '${{secrets.DOCKER_LOGIN}}' --password '${{secrets.DOCKER_PASSWORD}}'
 
     - name: Push the docker image
-      if: github.ref == 'refs/heads/main'
+     
       run: docker push '${{secrets.DOCKER_USERNAME}}'/server-app-pep:latest
