--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,16 +3,12 @@ on:
   push:
     branches: [ "main", "dev" ]
   pull_request:
-    branches: [ "main", "dev" ]
+    branches: [  "dev" ]
     
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-      AWS_ACCESS_KEY_ID: ${{secrets.AWS_SECRET_ACCESS_KEY_ID}}
-      REGION_NAME: ${{secrets.REGION_NAME}}
-
+    
     strategy:
       fail-fast: false
       matrix:
@@ -31,11 +27,4 @@ jobs:
       run: |
         pytest -rA
 
-    - name: Build the FastAPI Docker image
-      run: docker build -t '${{secrets.DOCKER_USERNAME}}'/server-app-pep:latest . --platform linux/amd64
-      
-    - name: Login to docker
-      run: docker login --username '${{secrets.DOCKER_LOGIN}}' --password '${{secrets.DOCKER_PASSWORD}}'
-
-    - name: Push the docker image
-      run: docker push '${{secrets.DOCKER_USERNAME}}'/server-app-pep:latest
+    
